--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
           <a-asset-item id="danse" src="./models/alizeerigv2compil.glb"></a-asset-item>
         </a-assets>
 
+        <a-entity light="type: spot; angle: 45"
+                  intensity= "5">
+        </a-entity>
+
         <a-entity scale="1 1 1"
                   position="-2 0.5 -2"
                   rotation="90 0 -80"
