--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- https://github.com/jgbarah/aframe-playground/tree/master/moving-01 -->
 <!-- Fox : https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0/Fox -->
-<!-- animations : dans le gltf "name":  01_pas1 /  02_pas2 /  03_pas3 -->
+<!-- animations : dans le gltf "name":  pas_01_d /  pas_04_f /   -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -13,7 +13,7 @@
 
       <a-scene>
         <a-assets>
-          <a-asset-item id="danse" src="./models/alizeerigv2compil.glb"></a-asset-item>
+          <a-asset-item id="danse" src="./models/alizee_leo.glb"></a-asset-item>
         </a-assets>
 
 
@@ -23,7 +23,7 @@
                   rotation="90 0 -80"
                   loaded
                   gltf-model="#danse"
-                  animation-mixer="clip: 01_pas1">
+                  animation-mixer="clip: pas_01_d">
         </a-entity>
 
         <a-entity scale="1 1 1"
@@ -31,16 +31,16 @@
                   rotation="90 0 -80"
                   loaded
                   gltf-model="#danse"
-                  animation-mixer="clip: 02_pas2">
+                  animation-mixer="clip: pas_04_f">
         </a-entity>
 
-        <a-entity scale="1 1 1"
+      <!--  <a-entity scale="1 1 1"
                   position="2 0.5 -2"
                   rotation="90 0 -80"
                   loaded
                   gltf-model="#danse"
                   animation-mixer="clip: 03_pas3">
-        </a-entity>
+        </a-entity> -->
 
 
 
