--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   rotation="90 0 -80"
                   loaded
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_01_d">
+                  animation-mixer="clip: pas_01_D ">
         </a-entity>
 
         <a-entity scale="1 1 1"
@@ -31,7 +31,7 @@
                   rotation="90 0 -80"
                   loaded
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_04_f">
+                  animation-mixer="clip: pas_04_F ">
         </a-entity>
 
       <!--  <a-entity scale="1 1 1"
