--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <!-- Fox : https://github.com/KhronosGroup/glTF-Sample-Models/tree/master/2.0/Fox -->
 <!-- animations : dans le gltf "name":  pas_01_d /  pas_04_f /   -->
 <!DOCTYPE html>
-<html>
+
+
+<html lang="fr">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script> -->
+    <script src="./unlock_audio_ios.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.0.1/dist/aframe-extras.min.js"></script>
+
+    <script>
+			// verifie le chaargement du model 3D
+	      	AFRAME.registerComponent('modele_loaded', {
+	          init: function () {
+	            var el = this.el;
+	            el.addEventListener('model-loaded', () => {
+	              console.log(">>>ça marche pour "+el.id);
+	              });
+	            this.el.addEventListener('model-error', () => {
+	                // Grab the mesh / scene.
+	                console.log(">>>modèle erreur");
+	              });
+	            }
+	      	});
+
+	    </script>
   </head>
 
   <body>
@@ -14,33 +36,21 @@
       <a-scene>
         <a-assets>
           <a-asset-item id="danse" src="./models/alizee_leo.glb"></a-asset-item>
+           <audio id="son" src="./models/zorba.mp3" preload="auto" autoplay="true" loop="false"></audio>
         </a-assets>
 
 
-
-        <a-entity scale="1 1 1"
-                  position="-2 0.5 -2"
-                  rotation="90 0 -80"
-                  loaded
-                  gltf-model="#danse"
-                  animation-mixer="clip: pas_01_D ">
-        </a-entity>
-
-        <a-entity scale="1 1 1"
+        <a-entity id="le pas 3"
+                  scale="1 1 1"
                   position="0 0.5 -2"
                   rotation="90 0 -80"
-                  loaded
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_04_F ">
+                  animation-mixer="clip: pas_03_D ; repetitions : 10 ; timeScale : 3 ; crossFadeDuration : 1"
+                  loaded
+                  >
         </a-entity>
 
-      <!--  <a-entity scale="1 1 1"
-                  position="2 0.5 -2"
-                  rotation="90 0 -80"
-                  loaded
-                  gltf-model="#danse"
-                  animation-mixer="clip: 03_pas3">
-        </a-entity> -->
+
 
 
 
@@ -50,6 +60,43 @@
         <a-light type="ambient" color="white"></a-light>
         <a-light type="point" intensity="2" position="-2 2 2"></a-light>
       </a-scene>
+
+      <!-- GESTION AUDIO -->
+      <button id="bouton" style="position: absolute; left: 20px; bottom: 20px;">SON ON</button>
+
+      <script>
+          var b = document.querySelector('#bouton');
+          var son_zorba = document.querySelector('#son');
+
+          var AudioContext = window.AudioContext || window.webkitAudioContext;
+          var contexteAudio = new AudioContext;
+
+          unlockAudioIOS(contexteAudio); // ok pour context = AudioContext;
+
+          function resumeAudio() {
+              console.log(contexteAudio.state);
+
+              if(contexteAudio.state == "suspended")
+              {
+                    contexteAudio.resume();
+                    console.log('Playback resumed successfully');
+                    son_zorba.play();
+                    b.innerHTML = "SON OFF";
+                    console.log("SON OFF");
+              }
+              else {
+                    contexteAudio.suspend();
+                    console.log('Playback paused successfully');
+                    son_zorba.pause();
+                    b.innerHTML = "SON ON";
+                    console.log("SON ON");
+              }
+              //document.removeEventListener("click", resumeAudio);
+          }
+          b.onclick = resumeAudio;
+      </script>
+
+
 
   </body>
 </html>
