--- a/index.html
+++ b/index.html
@@ -33,32 +33,36 @@
 
   <body>
 
-      <a-scene>
+      <a-scene background="color: skyblue">
         <a-assets>
           <a-asset-item id="danse" src="./models/alizee_leo.glb"></a-asset-item>
-           <audio id="son" src="./models/zorba.mp3" preload="auto" autoplay="true" loop="false"></audio>
+          <img id="thira" crossorigin="anonymous" src="./models/thira.jpg" />
+          <audio id="son" src="./models/zorba.mp3" preload="auto" autoplay="true" loop="false"></audio>
         </a-assets>
 
+        <!-- #lumières et evironnement -->
+        <a-entity light="type: ambient; color: #CCC; intensity: 1"></a-entity>
+        <a-entity light="type: directional; castShadow:true; intensity: 0.5" position="-1 2 1"></a-entity>
 
         <a-entity id="le pas 3"
                   scale="1 1 1"
-                  position="0 0.5 -2"
+                  position="0.474 0.314 -2"
                   rotation="90 0 -80"
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_03_D ; repetitions : 10 ; timeScale : 3 ; crossFadeDuration : 1"
+                  animation-mixer="clip: pas_03_D ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
                   loaded
+                  shadow="cast:true; receive:true"
                   >
         </a-entity>
 
+        <a-plane position="0.781 0.314 -2.488" rotation="-90 0 0" scale="1.321 1.456 1"
+  			shadow="receive: true"  material="transparent: true; opacity: 0.5" ></a-plane>
 
 
 
 
+	      <a-sky src="#thira"></a-sky>
 
-
-        <a-sky color="grey"></a-sky>
-        <a-light type="ambient" color="white"></a-light>
-        <a-light type="point" intensity="2" position="-2 2 2"></a-light>
       </a-scene>
 
       <!-- GESTION AUDIO -->
