--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       <a-scene background="color: skyblue">
         <a-assets>
-          <a-asset-item id="danse" src="./models/alizee_leo.glb"></a-asset-item>
+          <a-asset-item id="danse" src="./models/alizee_leo2.glb"></a-asset-item>
           <img id="thira" crossorigin="anonymous" src="./models/thira.jpg" />
           <audio id="son" src="./models/zorba.mp3" preload="auto" autoplay="true" loop="false"></audio>
         </a-assets>
@@ -49,14 +49,14 @@
                   position="0.474 0.314 -2"
                   rotation="90 0 -80"
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_03_D ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
+                  animation-mixer="clip: pas_01 ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
                   loaded
                   shadow="cast:true; receive:true"
                   >
         </a-entity>
 
         <a-plane position="0.781 0.314 -2.488" rotation="-90 0 0" scale="1.321 1.456 1"
-  			shadow="receive: true"  material="transparent: true; opacity: 0.3" ></a-plane>
+  			shadow="receive: true"  " ></a-plane>
 
 
 
