--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-C ompatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script> -->
     <script src="./unlock_audio_ios.js"></script>
@@ -35,7 +35,7 @@
 
       <a-scene background="color: skyblue">
         <a-assets>
-          <a-asset-item id="danse" src="./models/alizee_leo2.glb"></a-asset-item>
+          <a-asset-item id="danse" src="./models/alizee_leo.glb"></a-asset-item>
           <img id="thira" crossorigin="anonymous" src="./models/thira.jpg" />
           <audio id="son" src="./models/zorba.mp3" preload="auto" autoplay="true" loop="false"></audio>
         </a-assets>
@@ -49,7 +49,7 @@
                   position="0.474 0.314 -2"
                   rotation="90 0 -80"
                   gltf-model="#danse"
-                  animation-mixer="clip: pas_01 ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
+                  animation-mixer="clip: ready ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
                   loaded
                   shadow="cast:true; receive:true"
                   >
