--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <a-entity light="type: ambient; color: #CCC; intensity: 1"></a-entity>
         <a-entity light="type: directional; castShadow:true; intensity: 0.5" position="-1 2 1"></a-entity>
 
-        <a-entity id="le pas 3"
+        <a-entity id="model3D"
                   scale="1 1 1"
                   position="0.474 0.314 -2"
                   rotation="90 0 -80"
                   gltf-model="#danse"
-                  animation-mixer="clip: ready ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0"
+                  animation-mixer="clip: ready ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0 ; clampWhenFinished"
                   loaded
                   shadow="cast:true; receive:true"
                   >
