--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   position="0.474 0.314 -2"
                   rotation="90 0 -80"
                   gltf-model="#danse"
-                  animation-mixer="clip: ready ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0 ; clampWhenFinished"
+                  animation-mixer="clip: pas_03 ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0 ; clampWhenFinished : true"
                   loaded
                   shadow="cast:true; receive:true"
                   >
