--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                   >
         </a-entity>
 
-        <a-plane position="0.781 0.314 -2.488" rotation="-90 0 0" scale="1.321 1.456 1"
+        <a-plane position="0.781 0.756 -4.938" rotation="-90 0 0" scale="1.321 1.456 1"
         shadow="receive: true"  " ></a-plane>
 
 
         <a-entity id="model3D"
                   scale="1 1 1"
-                  position="1 -0.676 1.281"
+                  position="1 -1.1 1.281"
                   rotation="90 0 90"
                   gltf-model="#Jasmine"
                   animation-mixer="clip: pas_03 ; repetitions : 10 ; timeScale : 2 ; crossFadeDuration : 0 ; clampWhenFinished : true"
@@ -89,7 +89,7 @@
                   >
         </a-entity>
 
-        <a-plane position="0.781 0.314 -2.488" rotation="-90 0 0" scale="1.321 1.456 1"
+        <a-plane position="1.560 -1.109 1.305" rotation="-90 0 0" scale="1 1.456 1"
         shadow="receive: true"  " ></a-plane>
 
 
@@ -114,7 +114,7 @@
       </a-scene>
 
       <!-- Gestion audio -->
-      <button id="bouton" style="position: absolute; left: 20px; bottom: 20px;">SON ON</button>
+      <button id="bouton" style="position: absolute; left: 20px; bottom: 20px;">EN AVANT LA MUSIQUE!</button>
 
       <script>
           var b = document.querySelector('#bouton');
